Updates from Overleaf

--- a/CV_VEMS_2025_DA.tex
+++ b/CV_VEMS_2025_DA.tex
@@ -255,8 +255,8 @@
             \begin{highlights}
                 \item Perform a script in R for scoring and data cleaning of a psychometric test elaborated in Google Forms. The results are written in an Excel sheet. 
                 \item Assisted in the analysis of undergraduate thesis results by means of R (descriptive statistics, linear models, graphs). The generated results were saved in an Excel spreadsheet.
-                \item Make a simple Python script for analysing WhatsApp messages in a given time period (reply frequency, reply time, word frequency and their graphs).
-                \item Developed questionnaires and analysed psychometric data, assisting peers with code for test scoring.
+                \item Made a simple Python script for analyzing WhatsApp messages in a given time period (reply frequency, reply time, word frequency and their graphs).
+                \item Developed questionnaires and analyzed psychometric data, assisting peers with code for test scoring.
                 \item Implemented data validation and cleaning solutions (missing values, duplicates).
                 \item Proposed data-driven recommendations for decision-making in marketing, finance, and HR areas.
             \end{highlights}
