Actualizacion de detalle en la ciudad

--- a/CV_VEMS_2025_DA.tex
+++ b/CV_VEMS_2025_DA.tex
@@ -172,7 +172,7 @@
         \vspace{5 pt}
 
         \normalsize
-        \mbox{Mexico City}%
+        \mbox{Mexico City,Mexico}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
