Updates from Overleaf

--- a/CV_VEMS_2025_TA.tex
+++ b/CV_VEMS_2025_TA.tex
@@ -221,7 +221,28 @@
 
     \section{Experience}
 
+   \begin{twocolentry}{
+            Apr 2025 -- Current
+        }
+            \textbf{Sr. IT Recruiter & RPO} | CRH IT\end{twocolentry}
 
+        \vspace{0.10 cm}
+        \begin{onecolentry}
+            \begin{highlights}
+                In my current role as an RPO liaison, I manage the recruitment cycle for a key client, focusing on process efficiency and presenting clear information to stakeholders.
+
+                     My responsibilities include:
+
+                \item Data management of submitted candidates and preparation of daily Excel reports to track key recruitment process metrics.
+                \item Sourcing and initial screening of IT profiles, collecting relevant information for the pipeline.
+                \item Continuous follow-up of the candidate process, ensuring data integrity at each stage.
+                \item Coordination of interviews and communication with hiring managers, providing updates based on process status.
+
+            \end{highlights}
+        \end{onecolentry}
+
+
+        \vspace{0.2 cm}
 
         \begin{twocolentry}{
             Feb 2025 -- Apr 2025
