Updates from Overleaf

--- a/CV_VEMS_DA_SP.tex
+++ b/CV_VEMS_DA_SP.tex
@@ -172,7 +172,7 @@
         \vspace{5 pt}
 
         \normalsize
-        \mbox{Mexico City, Mexico}%
+        \mbox{Ciudad de México}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
@@ -198,13 +198,13 @@
     \vspace{5 pt - 0.3 cm}
 
 
-    \section{Resume}
+    \section{Perfil}
 
 
 
         
         \begin{onecolentry}
-           Data Analyst with expertise in Python, R, SQL, Excel, Power BI, and Tableau, recently completed the Data Analysis Specialization at TripleTen. Over 1.5 years of hands-on experience in data cleaning, visualization, and business insights generation. Combines analytical skills with 5+ years in IT recruitment, leveraging data-driven strategies to optimize hiring processes. Strong background in statistical analysis, dashboard development, and predictive modeling. Fluent in English and Spanish.
+           Analista de datos con experiencia en Python, R, SQL, Excel, Power BI y Tableau, recientemente completada la especialización en análisis de datos en TripleTen. Más de 1,5 años de experiencia práctica en limpieza de datos, visualización y generación de información empresarial. Combina habilidades analíticas con más de 5 años de experiencia en reclutamiento de TI, aprovechando estrategias basadas en datos para optimizar los procesos de contratación. Sólida formación en análisis estadístico, desarrollo de paneles de control y modelado predictivo. Habla inglés y español con fluidez.
            % \href{https://github.com/sinaatalay/rendercv}{RenderCV} is a LaTeX-based CV/resume framework. It allows you to create a high-quality CV or resume as a PDF file from a YAML file, with \textbf{full Markdown syntax support} and \textbf{complete control over the LaTeX code}.
         \end{onecolentry}
 
@@ -217,28 +217,28 @@
       %  \end{onecolentry}
 
 
-        \section{Data Proyects}
+        \section{Proyectos de datos}
 
     \begin{twocolentry}{
-            Projects at TripleTen 
+            Proyectos en Tripleten
         }
-            \textbf{Data Analysis Bootcamp}\end{twocolentry}
+            \textbf{Especialiazcion en analisis de datos}\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Analyse online music streaming data to compare music preferences in Springfield and Shelbyville.
-                \item Clean Instacart data and prepare a report on customer shopping habits.
-                \item Analyse data from 500 Megaline (Telecommunications) customers to determine which prepaid tariff (Surf or Ultimate) generates more revenue.
-                \item Analyse historical video game data (reviews, genres, platforms, sales) to identify patterns of success.
-                \item Practice common software engineering tasks to increase data skills by making a dashboard on a web page (streamlit) with data from the last 5 years of the CDMX underground.
-                \item Analyse Zuber (taxi company) data to identify passenger preference patterns and the impact of external factors.
-                \item Analyse data on visits, orders and marketing spend in Showz to optimise marketing spend.
-                \item Analyse data of an e-commerce company of an A/B test and the hypotesis testing. Made an analysis of ICE \& RICE prioritization methods.
-                \item Sales funnel analysis and A/A/B testing to assess the impact of a change of sources on the implementation of a food company.
-                \item Develop a dashboard to automate weekly trend analysis of YouTube videos, categorizing content by region and popularity in the United States.
-                \item Analyse customer data from Model Fitness to predict churn probability, identify key user segments, and determine the main factors influencing retention. Provide recommendations to reduce customer attrition.
-                \item Analyzing data from one of the two areas (Telecommunications and E-commerce), including preprocessing, exploratory data analysis, SQL Queries, hypothesis testing, working with business metrics, and preparing a presentation. Also, build a dashboard for visualization.
+                \item Analizar datos de streaming de música online para comparar las preferencias musicales en Springfield y Shelbyville.
+                \item Limpiar datos de Instacart y preparar un informe sobre los hábitos de compra de los clientes.
+                \item Analizar datos de 500 clientes de Megaline (telecomunicaciones) para determinar qué tarifa prepago (Surf o Ultimate) genera más ingresos.
+                \item Analizar datos históricos de videojuegos (reseñas, géneros, plataformas, ventas) para identificar patrones de éxito.
+                \item Practicar tareas comunes de ingeniería de software para aumentar las habilidades con los datos mediante la creación de un panel de control en una página web (streamlit) con datos de los últimos 5 años del metro de CDMX.
+                \item Analizar los datos de Zuber (empresa de taxis) para identificar los patrones de preferencia de los pasajeros y el impacto de los factores externos.
+                \item Analizar los datos sobre visitas, pedidos y gasto en marketing en Showz para optimizar el gasto en marketing.
+                \item Analizar los datos de una empresa de comercio electrónico de una prueba A/B y la comprobación de hipótesis. Realizar un análisis de los métodos de priorización ICE \& RICE.
+                \item Análisis del embudo de ventas y pruebas A/A/B para evaluar el impacto de un cambio de fuentes en la implementación de una empresa alimentaria.
+                \item Desarrollar un panel de control para automatizar el análisis semanal de tendencias de los vídeos de YouTube, clasificando el contenido por región y popularidad en Estados Unidos.
+                \item Analizar los datos de clientes de "Model Fitness" para predecir la probabilidad de abandono, identificar los segmentos de usuarios clave y determinar los principales factores que influyen en la retención. Proporcionar recomendaciones para reducir la pérdida de clientes.
+                \item Analizar los datos de una de las dos áreas (telecomunicaciones y comercio electrónico), incluyendo el preprocesamiento, el análisis exploratorio de datos, las consultas SQL, la comprobación de hipótesis, el trabajo con métricas empresariales y la preparación de una presentación. Además, crear un panel de control para la visualización.
             \end{highlights}
         \end{onecolentry}
 
@@ -248,17 +248,17 @@
     \begin{twocolentry}{
             
         } 
-            \textbf{Personal Projects}\end{twocolentry}
+            \textbf{Proyectos Personales}\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Perform a script in R for scoring and data cleaning of a psychometric test elaborated in Google Forms. The results are written in an Excel sheet. 
-                \item Assisted in the analysis of undergraduate thesis results by means of R (descriptive statistics, linear models, graphs). The generated results were saved in an Excel spreadsheet.
-                \item Made a simple Python script for analyzing WhatsApp messages in a given time period (reply frequency, reply time, word frequency and their graphs).
-                \item Developed questionnaires and analyzed psychometric data, assisting peers with code for test scoring.
-                \item Implemented data validation and cleaning solutions (missing values, duplicates).
-                \item Proposed data-driven recommendations for decision-making in marketing, finance, and HR areas.
+                \item Realizar un script en R para la puntuación y limpieza de datos de una prueba psicométrica elaborada en Google Forms. Los resultados se escriben en una hoja de Excel. 
+                \item Asistencia en el análisis de los resultados de tesis de grado mediante R (estadística descriptiva, modelos lineales, gráficos). Los resultados generados se guardaron en una hoja de cálculo de Excel.
+                \item Creación de un script sencillo en Python para analizar mensajes de WhatsApp en un periodo de tiempo determinado (frecuencia de respuesta, tiempo de respuesta, frecuencia de palabras y sus gráficos).
+                \item Desarrollo de cuestionarios y análisis de datos psicométricos, ayudando a compañeros con el código para la puntuación de pruebas.
+                \item Implementación de soluciones de validación y limpieza de datos (valores perdidos, duplicados).
+                \item Propuesta de recomendaciones basadas en datos para la toma de decisiones en las áreas de marketing, finanzas y recursos humanos.
             \end{highlights}
         \end{onecolentry}
         
@@ -266,25 +266,24 @@
         \vspace{0.2 cm}
         
 \newpage
-    \section{Experience}
+    \section{Experiencia}
 
  \begin{twocolentry}{
             %Feb 2025 -- Apr 2025
         }
-            \textbf{Sr. IT Recluiter} | CHR IT (Abr-25-current); Branchbit (Feb 2025 – Apr 2025); Recruit IT (Mar 2022 – Jan 2025)\end{twocolentry}
+            \textbf{Sr. IT Recluiter} | CHR IT (Abr-25-Actual); Branchbit (Feb 2025 – Abr 2025); Recruit IT (Mar 2022 – Ene 2025)\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Full-cycle recruitment using a data-driven approach to analyze hiring trends and optimize processes with KPIs and metrics.
-                \item Execution of socioeconomic studies and verification of employment references using structured data analysis to ensure reliability and compliance.
-                \item Market salary report analysis to provide compensation estimates for IT roles.
-                \item Office management activities related to recruitment, including process efficiency analysis, resource allocation, and logistics optimization.
-                \item Coordination of interviews and process optimization using analytics to track response times, candidate experience, and conversion rates.
-                \item Execution of structured technical and competency-based interviews, leveraging assessment data to improve hiring decisions.
-                \item Management and continuous updating of candidate databases, applying data analysis techniques to enhance selection strategies and reduce time-to-hire.
-                \item Utilization of ATS (Applicant Tracking Systems) with data analytics for applicant tracking, recruitment funnel optimization, and performance measurement.
-                \item Support in onboarding procedures, analyzing new hire performance metrics and retention rates to enhance the integration process.
+               \item Reclutamiento de ciclo completo utilizando un enfoque basado en datos para analizar las tendencias de contratación y optimizar los procesos con KPI y métricas.
+                \item Realización de estudios socioeconómicos y verificación de referencias laborales mediante análisis de datos estructurados para garantizar la fiabilidad y el cumplimiento.
+                \item Análisis de informes salariales del mercado para proporcionar estimaciones de remuneración para puestos de TI.
+                \item Actividades de gestión de la oficina relacionadas con la contratación, incluyendo el análisis de la eficiencia de los procesos, la asignación de recursos y la optimización de la logística.
+                \item Coordinación de entrevistas y optimización de procesos mediante el uso de análisis para realizar un seguimiento de los tiempos de respuesta, la experiencia de los candidatos y las tasas de conversión.
+                \item Gestión y actualización continua de las bases de datos de candidatos, aplicando técnicas de análisis de datos para mejorar las estrategias de selección y reducir el tiempo de contratación.
+                \item Utilización de ATS (sistemas de seguimiento de candidatos) con análisis de datos para el seguimiento de los candidatos, la optimización del embudo de contratación y la medición del rendimiento.
+                \item Apoyo en los procedimientos de incorporación, analizando las métricas de rendimiento de los nuevos empleados y las tasas de retención para mejorar el proceso de integración.
             \end{highlights}
         \end{onecolentry}
 
@@ -295,67 +294,67 @@
  %end of non select 
 
 
-    \section{Languages}
+    \section{Idiomas}
         \begin{samepage}
             \begin{onecolentry}
                 \begin{highlightsforbulletentries}
-                \item Spanish (Native)
-                \item English (Advanced)
+                \item Español (Native)
+                \item Inglés (Advanzado)
                 \end{highlightsforbulletentries}
             \end{onecolentry}
         \end{samepage}
          
-    \section{Knowledge}
+    \section{Conocimiento}
         \begin{samepage}
             \begin{onecolentry}
                 \begin{highlightsforbulletentries}
-                \item  MS Office (7 years)
-                \item  Recruitment (5 years)
-                \item  Document Management (3 year)
-                \item  Training (2 years)
-                \item  HR processes (2 years)
-                \item Data Analysis: (1.5 years)
+                \item  MS Office (7 años)
+                \item  Reclutamiento (5 años)
+                \item  Gestión de documentos (3 años)
+                \item  Formación (2 años)
+                \item  Procesos de RR. HH. (2 años)
+                \item Análisis de datos: (2 años)
                 \begin{itemize}
-                    \item  Tools: Python, R, SQL, Excel, Power BI, Tableau
-                    \item Techniques: Exploratory Data Analysis (EDA), Data Visualization, Data Cleaning, Dashboard Creation, WebScraping
+                    \item  Herramientas: Python, R, SQL, Excel, Power BI, Tableau
+                    \item Técnicas: Análisis exploratorio de datos (EDA), visualización de datos, limpieza de datos, creación de paneles de control, web scraping
                 \end{itemize}
                 \end{highlightsforbulletentries}
             \end{onecolentry}
         \end{samepage} 
 %\newpage
 
-    \section{Education}
+    \section{Educación}
         \begin{samepage}
         \begin{twocolentry}{      Sept 2014 – Nov 2018 }
-            \textbf{UNAM}, BS degree in Psychology  \end{twocolentry}
+            \textbf{UNAM}, Lic. Psicología  \end{twocolentry}
                 \begin{onecolentry}
             \begin{highlights}
                 % \item  
-                \item \textbf{Coursework:} Neuroscience, Statistics, Data analysis, Scientific method
+                \item \textbf{Area:} Neurociencia, Estadística, Análisis de datos, Método científico
             \end{highlights}
         \end{onecolentry}\textbf{}
         % nuevo exp
         \vspace{0.10 cm}
 
 
-        \begin{twocolentry}{    August 2024 – March 2025   }
-            \textbf{TripleTen}, Data Analyst Bootcamp\end{twocolentry}
+        \begin{twocolentry}{    Agosto 2024 – Marzo 2025   }
+            \textbf{TripleTen}, Especializacion en analisis de datos\end{twocolentry}
         \begin{onecolentry}
             \begin{highlights}
             % \item  
-                \item \textbf{Coursework:} Python, Statistics, Data analysis, Software engineering, SQL, Web scraping.
+                \item \textbf{Conocimientos:} Python, Estadística, Análisis de datos, Ingeniería de software, SQL, Web scraping.
             \end{highlights}
         \end{onecolentry}\textbf{}
         \vspace{0.10 cm}
         \end{samepage} 
 
         
-    \section{Courses and Updating}
+    \section{Cursos y actualización}
     \begin{samepage} 
         \begin{twocolentry}{
             2020
         }
-            \textbf{Udemy} Excel and PowerBI Course – Data Analysis and Visualization
+            \textbf{Udemy} Curso de Excel y PowerBI: análisis y visualización de datos
         \end{twocolentry}
 
         \vspace{0.2 cm}
@@ -363,7 +362,7 @@
         \begin{twocolentry}{
             2020
         }
-            \textbf{Udemy} Complete Excel – Beginner to Advanced
+            \textbf{Udemy} Excel completo: de principiante a avanzado
         \end{twocolentry}
 
         \vspace{0.2 cm}
@@ -371,7 +370,7 @@
         \begin{twocolentry}{
             2020
         }
-            \textbf{EdX} Inclusion at Work: Skills for finding, keeping and advancing in a job
+            \textbf{EdX} Inclusión en el trabajo: habilidades para encontrar, mantener y progresar en un empleo.
         \end{twocolentry}
 
         \vspace{0.2 cm}
@@ -392,9 +391,5 @@
     \end{samepage}
 
 
-    
-
-
-    
 
 \end{document}
