--- a/CV_VEMS_2025_DA.tex
+++ b/CV_VEMS_2025_DA.tex
@@ -271,7 +271,7 @@
  \begin{twocolentry}{
             %Feb 2025 -- Apr 2025
         }
-            \textbf{Sr. IT Recluiter} | CHR IT (Abr-25-current); Branchbit (Feb 2025 – Apr 2025); Recruit IT (Mar 2022 – Jan 2025)\end{twocolentry}
+            \textbf{Sr. IT Recluiter} | CHR IT (Abr-25-Sep 25); Branchbit (Feb 2025 – Apr 2025); Recruit IT (Mar 2022 – Jan 2025)\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
@@ -291,7 +291,32 @@
 
         \vspace{0.2 cm}
 
-    
+ \begin{twocolentry}{
+            Oct 2025 -- Current
+        }
+    \textbf{Talent Acquisition Data Specialist} | Experis \end{twocolentry}
+
+        \vspace{0.10 cm}
+        \begin{onecolentry}
+            \begin{highlights}
+                \item Developed recruitment performance dashboards in Power BI (including data modeling and relationship design from SQL sources) and Excel.
+
+                \item Extracted and cleaned ATS data using SQL, applying view creation, filtering, and joins to prepare reliable datasets.
+
+                \item Analyzed the recruitment funnel, stage-to-stage conversion rates, and key time metrics (time to cover, time from request to start of recruitment, and time to deliver viable candidates).
+                
+                \item Consolidated and filtered LATAM-level datasets (7 years of historical data) to generate focused reports for Mexico and specific time periods.
+                
+                \item Presented dashboards and insights during status meetings with commercial teams and senior leadership, supporting strategic decision-making.
+                
+                \item Designed a comprehensive view of the recruitment process, incorporating all critical stages and metrics.
+                
+                \item Explored and proposed automation approaches, considering corporate policies and data-access constraints.
+            \end{highlights}
+        \end{onecolentry}
+
+
+        \vspace{0.2 cm}
  %end of non select 
 
 
@@ -316,7 +341,7 @@
                 \item  HR processes (2 years)
                 \item Data Analysis: (1.5 years)
                 \begin{itemize}
-                    \item  Tools: Python, R, SQL, Excel, Power BI, Tableau
+                    \item  Tools: Python(Pandas, NumPy, Matplotlib, Pyspark, SciPy, sklearn, etc.), R, SQL, Excel, Power BI, Tableau
                     \item Techniques: Exploratory Data Analysis (EDA), Data Visualization, Data Cleaning, Dashboard Creation, WebScraping
                 \end{itemize}
                 \end{highlightsforbulletentries}
@@ -327,7 +352,7 @@
     \section{Education}
         \begin{samepage}
         \begin{twocolentry}{      Sept 2014 – Nov 2018 }
-            \textbf{UNAM}, BS degree in Psychology  \end{twocolentry}
+            \textbf{UNAM}, BS degree  \end{twocolentry}
                 \begin{onecolentry}
             \begin{highlights}
                 % \item  
