--- a/CV_VEMS_2025_TA.tex
+++ b/CV_VEMS_2025_TA.tex
@@ -224,7 +224,7 @@
    \begin{twocolentry}{
             Apr 2025 -- Current
         }
-            \textbf{Sr. IT Recruiter & RPO} | CRH IT\end{twocolentry}
+            \textbf{Sr. IT Recruiter \& RPO} | CRH IT\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
