--- a/CV_VEMS_2025_DA.tex
+++ b/CV_VEMS_2025_DA.tex
@@ -292,7 +292,7 @@
         \vspace{0.2 cm}
 
  \begin{twocolentry}{
-            Oct 2025 -- Current
+            Oct 2025 -- Dec 2025
         }
     \textbf{Talent Acquisition Data Specialist} | Experis \end{twocolentry}
 
